[package]
name = "codesnake"
description = "Pretty printer for non-overlapping code spans"
version = "0.1.0"
edition = "2021"
rust-version = "1.62"
license = "MIT"
keywords = ["error", "diagnostics", "report", "compiler", "programming-language", "pretty"]
categories = ["value-formatting"]

[dev-dependencies]
unicode-width = "0.1.13"
yansi = "1.0.1"
