[package]
name = "codesnake"
description = "Pretty printer for non-overlapping code spans"
version = "0.3.0"
authors = ["Michael Färber <michael.faerber@gedenkt.at>"]
repository = "https://github.com/01mf02/codesnake"
edition = "2021"
rust-version = "1.62"
license = "MIT"
keywords = ["error", "diagnostics", "report", "compiler", "programming-language"]
categories = ["command-line-utilities", "compilers", "value-formatting"]

[dev-dependencies]
pretty_assertions = "1.4.1"
unicode-width = "0.1.13"
yansi = "1.0.1"
